@@ -4,7 +4,8 @@ Bug fixes:
 - #6953 | #6961 The system does not update server name in Server configuration
 
 Enhancements:
-- #6954 Move language selection to advanced section 
+- #6954 Move language selection to advanced section
+- #6962 Add macos10.13 builder
 ===========
 
 v1.13.1-stable
